--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
             <h3 class="subscription-title">Подпишитесь на рассылку</h3>
 
-<form action="" class="sub-form">
+<form action="#" class="sub-form">
 
             <input type="text" class="subscription-input" name="subscription-email" placeholder="E-mail">
 
